# Django

./: category.json  product.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py  wsgi.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_version.py  0003_product_owner.py
catalog/templates/catalog/: base.html  contacts.html  index.html  product.html  product_confirm_delete.html  product_form.html
catalog/templatetags/: custom.py
config/: asgi.py  settings.py  urls.py  wsgi.py
media/products/: 2da6815a6f9611ee97de222e7fa838a6_upscaled_91R0zgs.jfif  aa9a3da76dd911ee8fc9d659965eed18_upscaled.jfif  Без_названия.jfif
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_country_and_more.py
users/templates/users/: regenerate_password.html  user_form.html
