[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Evgeny <norilkarus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pillow = "^10.1.0"
psycopg2-binary = "^2.9.9"
django = "^4.2.7"
ipython = "^8.18.0"
pytils = "^0.4.1"
django-crispy-forms = "^2.1"
redis = "^5.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
